# market-surveillance

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  diff.patch  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pytest.ini  requirements.txt  verify_e2e_lifecycle.py
alembic/: env.py
alembic/versions/: 002_add_watchlists.py  003_add_refresh_tokens.py  004_real_model_scoring.py
app/: config.py  database.py  main.py  models.py
app/core/: exceptions.py  security.py
app/routers/: alerts.py  anomaly.py  auth.py  market_data.py  reports.py
app/schemas/: __init__.py  streaming.py
backend/: pytest.ini  requirements.txt
context/: PROJECT_CONTEXT.md  even_more_repos.txt  implementation_plan.md  more_repos.txt  new_repos.txt  repo_analysis.md  task.md  walkthrough.md
docs/: audit_phase7.md
mkt_surveillance_ml/: README.md
ml/: pyproject.toml
ml/scripts/: per_symbol_eval.py
ml/src/ml/detection/: multi_pattern.py  weak_labeling.py
ml/src/ml/serving/: model_registry.py
ml/src/ml/time_series/: arima_prophet.py
ml/tests/: test_arima_prophet.py  test_gradient_boosting.py  test_lstm.py  test_model_registry.py  test_random_forest.py  test_scaling.py  test_stationarity.py  test_synthetic_data.py  test_train_script.py
scratch/: test_anomalies_list.py  test_gemini_35.py  test_genai.py  test_interactions.py  test_interactions_2.py  test_prod_config.py  test_pydantic.py
scripts/: run_engine.py
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_integration_config.py  test_market_data.py  test_reports.py  test_streaming.py
(+110 files in other folders)
